[package]
name = "latexify"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Shared definition for turn a rust object into latex code"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/latexify"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]

[dev-dependencies]

[features]
default = []
