[package]
name = "make-up-number"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/anomalous-cancellation"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
dashu = { version = "0.3.1", features = ["serde"] }
itertools = "0.10.5"
gen-iter = "0.3.0"
serde = "1.0.152"
serde_derive = "1.0.152"
ahash = "0.8.3"
dashmap = "5.4.0"
catalan = "0.3.0"

[dependencies.latexify]
#version = "0.0.0"
path = "../latexify"

[dev-dependencies]

[features]
default = []
